Fix sidebar vertical overflow

--- a/src/react-components/sidebar/Sidebar.scss
+++ b/src/react-components/sidebar/Sidebar.scss
@@ -38,10 +38,7 @@
   display: flex;
   flex: 1;
   flex-direction: column;
-
-  @media(max-width: theme.$breakpoint-md - 1) {
-    overflow-y: auto;
-  }
+  overflow-y: auto;
 }
 
 :local(.back-button) {
